force-app/main/default/objects/AIService__c/AIService__c.object-meta.xml
<CustomObject>
    <label>AI Service</label>
    <nameField>
        <label>AI Service Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AI Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    
    <!-- Client Lookup Field -->
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>AI Services</relationshipLabel>
        <relationshipName>AI_Services</relationshipName>
        <type>Lookup</type>
    </fields>
    
    <!-- Service Name Text Field -->
    <fields>
        <fullName>Service_Name__c</fullName>
        <label>Service Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <!-- Model Used Text Field -->
    <fields>
        <fullName>Model_Used__c</fullName>
        <label>Model Used</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    
    <!-- Deployment Date Field -->
    <fields>
        <fullName>Deployment_Date__c</fullName>
        <label>Deployment Date</label>
        <type>Date</type>
    </fields>
    
    <!-- Integration Status Picklist Field -->
    <fields>
        <fullName>Integration_Status__c</fullName>
        <label>Integration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Integrated</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject> 