force-app/main/default/objects/AIService__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AI Services</relationshipLabel>
    <relationshipName>AI_Services</relationshipName>
    <type>Lookup</type>
</CustomField> 