force-app/main/default/objects/AIService__c/fields/Model_Used__c.field-meta.xml
<CustomField>
    <fullName>Model_Used__c</fullName>
    <label>Model Used</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 